<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/save_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/ic_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_send_tv" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/nama_pengguna" />
        <TextView
            android:id="@+id/save_send_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/save_send_to_dokter"
            android:textColor="@color/main"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/username_tv"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/username"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Jajang" />

        <ImageView
            android:id="@+id/imageResult_iv"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:maxHeight="300dp"
            android:maxWidth="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:transitionName="image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_iv"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/result_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_jenis"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageResult_iv" />

        <TextView
            android:id="@+id/result_name_tv"
            android:transitionName="name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_name"
            tools:text="Blackheads" />

        <TextView
            android:id="@+id/keterangan_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/keterangan_result"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_name_tv" />

        <Button
            android:id="@+id/daftar_jerawat_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_btn"
            android:text="@string/menu_daftar"
            android:textColor="@color/white"
            android:textStyle="italic|bold"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keterangan_tv" />



        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>